[Refactor] Rename visitSubquery(sync #56505) (#33792)
* [Refactor] Rename visitSubquery

* fix (#33811)

Signed-off-by: Seaven <seaven_7@qq.com>

* fix conflict

---------

Signed-off-by: Seaven <seaven_7@qq.com>
Co-authored-by: Seaven <seaven_7@qq.com>
Co-authored-by: yanz <dirtysalt1987@gmail.com>